registradas mensagens de erros das rotas no swagger
